[metadata]
name = DjangoFileStorageHandler
author = Shashank Shukla
author-email = shuklashashank@outlook.com
summary = You can handle your storage files to MINIO, S3 or Local through Settings
description-file = README.md
home-page = https://github.com/shuklashashank/DjangoFileStorageHandler
license = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development
    Programming Language :: Python :: 3
    Framework :: Django

[files]
packages =
    stdimage

[tool:pytest]
norecursedirs=venv env .eggs
DJANGO_SETTINGS_MODULE=tests.settings
addopts = --tb=short -rxs --nomigrations

[pycodestyle]
max-line-length = 79
statistics = true
show-source = true
exclude = */migrations/*,docs/*,env/*,venv/*,.tox/*,.eggs


[pydocstyle]
add-ignore = D1
match-dir = (?!tests|env|docs|\.).*

[coverage:run]
source = .
omit =
  */migrations/*
  */tests/*
  */test_*.py
  .tox

[coverage:report]
ignore_errors = True
show_missing = True

[isort]
atomic = true
multi_line_output = 5
line_length = 79
combine_as_imports = true
skip = wsgi.py,docs,tests/test_models.py,.tox,env,.eggs
known_first_party = stdimage,tests
known_third_party = django