[metadata]
name = DjangoFileStorageHandler
author = Shashank Shukla
author-email = shuklashashank@outlook.com
summary = You can handle your storage files to MINIO, S3 or Local through Settings
description-file = README.md
home-page = https://github.com/shuklashashank/DjangoFileStorageHandler
license = MIT
classifier =
    Environment :: Web Environment
    Framework :: Django
    Topic :: STORAGE :: SERVER
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development
    Programming Language :: Python :: 3
    Framework :: Django

[files]
packages =
    storagehandler
